--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>MyPage</title>
+    <link rel="stylesheet" href="bootstrap4-neon-glow.min.css">
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="github-lang-colors.css">
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
   </head>
   <body>
     <noscript>
