--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>MyPage</title><link rel=stylesheet href=bootstrap4-neon-glow.min.css><link rel=stylesheet href=app.css><link rel=stylesheet href=github-lang-colors.css><link rel=stylesheet href=//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css><link href=/css/app.1fbca177.css rel=preload as=style><link href=/js/app.be617ca5.js rel=preload as=script><link href=/js/chunk-vendors.61a1cac9.js rel=preload as=script><link href=/css/app.1fbca177.css rel=stylesheet></head><body><noscript><strong>We're sorry but MyPage doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.61a1cac9.js></script><script src=/js/app.be617ca5.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Diego Auyón</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+    <link rel="stylesheet" href="css/github-lang-colors.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
+</head>
+<body>
+    <div id="app">
+        <div class="jumbotron bg-transparent mb-0 radius-0">
+            <div class="container">
+                <!-- Header -->
+                <div class="ht-tm-header">
+                    <div class="row">
+                    <div class="col-12 text-center">
+                        <h1 class="display-2">Diego Auy<span class="vim-caret">ó</span>n</h1>
+                        <div class="lead mb-3 text-mono text-success">WEB DEVELOPER</div>
+                    </div>
+                    </div>
+                </div>
+                <!-- Cards -->
+                <div class="row">
+                    <div class="col-12 col-sm-4 col-md-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Amanda</div>
+                                <div class="card-text">Game Engine with GPL, and nice perfomance.</div>
+                                <div class="card-language font-shell">Shell</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-4 col-md-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Amanda</div>
+                                <div class="card-text">Game Engine with GPL, and nice perfomance.</div>
+                                <div class="card-language font-javascript">Javascript</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-4 col-md-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Amanda</div>
+                                <div class="card-text">Game Engine with GPL, and nice perfomance.</div>
+                                <div class="card-language font-python">Python</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-4 col-md-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Amanda</div>
+                                <div class="card-text">Game Engine with GPL, and nice perfomance.</div>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-12 col-sm-4 col-md-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Amanda</div>
+                                <div class="card-text">Game Engine with GPL, and nice perfomance.</div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <!-- Footer -->
+                <footer>
+                    <div class="row">
+                        <div class="col-12">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">🖤 Thank you to</li> 
+                                <li class="list-inline-item"><a href="https://hackerthemes.com/bootstrap-themes/">Hackerthemes</a></li>
+                                <li class="list-inline-item"><a href="https://github.com/ozh/github-colors">Github-colors (languages colors)</a></li>
+                                <li class="list-inline-item"><a href="https://github.com/source-foundry/Hack">Hack Font</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </div>
+    <!-- Bootstrap Javascript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <!-- Animations -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Execute -->
+    <script>
+        ScrollReveal().reveal('.card', { delay: 1000, interval: 200 });
+        ScrollReveal().reveal('footer', { delay: 2000 });
+    </script>
+</body>
+</html>
